   by SimGrid kernel (i.e., resources and activities) from plugins built in
   user space (e.g., the file system plugin). This new tag currently accepts
   only three attributes (id, read_bw, and write_bw). All the other information
   that was declared with the storage related tags now has to be expressed as
   properties. An example of platform using this new tag is available at
   examples/platforms/hostsè_with_disks.xml

Fixed bugs (FG#.. -> framagit bugs; FG!.. -> framagit merge requests):
 - FG#28: add sg_actor_self (and other wrappers on this_actor methods)
 - FG#29 and FG#33: provide a new C API to mutexes and condition variables
 - FG#30: convert MSG_process_{un}ref to sg_actor_{un}ref
 - FG#31: per-actor data
 - FG#34: SG_BARRIER_SERIAL_THREAD?
 - FG#35: model-checker does not like buster-produced binaries
 - FG!13: MC: complete workaround in the error msg seen on modern systems
 - FG!15: execute_flops now logs compute
 - FG!16: Fix the ns-3 bindings when several flows are simultaneously finishing
 - FG!17: ns-3: unblock the right number of communications + others issues
 - FG!18: Improving the performance of the ns-3 bindings
 - GH#219: Error in the throughput of TCP transfer
 - GH!330: Minor polishing of English: Configuring_Simgrid
 - GH!331: Fix a doc error about actors (Tutorial_algorithms)
 - GH!332: Add '-O0' flag for: cmake -DCMAKE_BUILD_TYPE=Debug

----------------------------------------------------------------------------

SimGrid (3.23.2) July 8. 2019

Documentation:
 - Nicer introduction page.
 - Migrate the "Deploy your application" page to the new doc.
 - Move Java as a subtree of MSG.

General:
 - Rename simgrid::TimeoutError to simgrid::TimeoutException.

XBT:
 - Drop xbt_dynar_sort_strings().

Bugs:
 - Really fix FG#26: Turning off a link should raise NetworkFailureException
 - FG#27: Wrong exception thrown to wait_any when link is turned off
 - GH#328: Java: Canceling multiple tasks in a single vm/host
